--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.7.9",
+    "devextreme": "^24.2.3",
+    "devextreme-quill": "^1.7.1",
+    "devextreme-react": "^24.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
